Fixed MarketPage key error; fixed pending shares outcome indexing; reverted cash/rep/ether display to horizontal; added updatePrice method to MarketActions; fixed Portfolio market title alignment

--- a/app/css/augur.css
+++ b/app/css/augur.css
@@ -957,7 +957,6 @@ a.market-pane:hover {
 }
 
 .holdings .description {
-    margin: 0px 75px 0px 40px;
     overflow: hidden;
     text-overflow: ellipsis;
     float: left;
