--- a/app/less/partials/navbars.less
+++ b/app/less/partials/navbars.less
@@ -121,12 +121,11 @@
                 cursor: pointer;
 
                 li {
-                    display:block; float: none;
+                    display:block;
 
                     a {
                         padding: 0.0rem 0.8rem;
                         line-height: 1.2rem;
-                        font-size: 0.8rem;
 
                         span:first-child {
                             color: @color-grey-lighter;
